force-app/main/default/objects/Contract_Grade_Report__c/Contract_Grade_Report__c.object-meta.xml
<CustomObject>
    <description>Created for Reporting Snaphot to allow Executive Reporting on Active Contracts in this Quarter vs. Previous Quarters (trend analysis)</description>
    <label>Contract Grade Report</label>
    <nameField>
        <displayFormat>CSS-{0000000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Grade Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>