force-app/main/default/objects/Contract_Grade_Report__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Contract Grade Report</relationshipLabel>
    <relationshipName>Contract_Grade_Report</relationshipName>
    <type>Lookup</type>
</CustomField>