force-app/main/default/objects/Contract_Grade_Report__c/fields/Contract_Grade__c.field-meta.xml
<CustomField>
    <fullName>Contract_Grade__c</fullName>
    <label>Contract Grade</label>
    <length>10</length>
    <type>Text</type>
</CustomField>