force-app/main/default/objects/Contract_Grade_Report__c/fields/Contract_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Record_Type__c</fullName>
    <formula>Contract__r.Record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Record Type</label>
    <type>Text</type>
</CustomField>