force-app/main/default/objects/Contract_Grade_Report__c/fields/Contract_Term_months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_months__c</fullName>
    <formula>Contract__r.ContractTerm</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Term (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>