force-app/main/default/objects/Contract_Grade_Report__c/fields/Provision__c.field-meta.xml
<CustomField>
    <fullName>Provision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provision</label>
    <referenceTo>Provision__c</referenceTo>
    <relationshipLabel>Contract Grade Report</relationshipLabel>
    <relationshipName>Contract_Grade_Report</relationshipName>
    <type>Lookup</type>
</CustomField>