force-app/main/default/objects/Contract_Grade_Report__c/fields/Provision_Record_No__c.field-meta.xml
<CustomField>
    <fullName>Provision_Record_No__c</fullName>
    <label>Provision Record No.</label>
    <length>60</length>
    <type>Text</type>
</CustomField>